@@ -61,3 +61,7 @@ V1.0.1
 	  	match with cfitsio 3.0 fits_create_img()
 	- read_image: change type of naxes from unsigned long to long to
 		match with cfitsio 3.0 fits_read_keys_lng()
+22 May 2006: [v1.2.5]
+	- use HOME to set PREFIX
+	- unable to use UNAME to set OS, yet. added to TODO.
+	- clean up link to shared library.
